confs/jellyfin/jellyfin_app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - jellyfin
              topologyKey: "kubernetes.io/hostname"
      volumes:
      - name: transmission-pvc
        persistentVolumeClaim:
          claimName: transmission-pvc
      - name: jellyfin-pvc-config
        persistentVolumeClaim:
          claimName: jellyfin-pvc-config
      containers:
      - env:
        - name: JELLYFIN_PublishedServerUrl 
          value: op5.local
        - name: PGID
          value: "\x36\x35\x35\x34\x31" # < ASCII code for '65541'
        - name: PUID
          value: "\x31\x30\x34\x34" # < ACII code for '1044'
        - name: TZ
          value: Europe/Moscow
        - name: JELLYFIN_MARIADB_SERVER
          value: mariadb.default.svc.cluster.local
        - name: JELLYFIN_MARIADB_PORT
          value: "3306"
        - name: JELLYFIN_MARIADB_DATABASE
          value: mysql
        - name: JELLYFIN_MARIADB_USER
          valueFrom:
            secretKeyRef:
              key: MYSQL_USER
              name: apps-secrets
        - name: JELLYFIN_MARIADB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: MYSQL_PASSWORD
              name: apps-secrets
        securityContext:
          privileged: true
        image: ghcr.io/linuxserver/jellyfin
        imagePullPolicy: Always
        name: jellyfin
        ports:
        - containerPort: 8096
          name: http-tcp
          protocol: TCP
        - containerPort: 8920
          name: https-tcp
          protocol: TCP
        - containerPort: 1900
          name: dlna-udp
          protocol: UDP
        - containerPort: 7359
          name: discovery-udp
          protocol: UDP
        resources: {}
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /jellyfin/
          name: transmission-pvc
        - mountPath: /config
          name: jellyfin-pvc-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
