confs/jellyfin/jellyfin_service.yaml
apiVersion: v1
kind: Service
metadata:
    name: jellyfin 
    labels:
        app: jellyfin
spec:
    ports:
        - port: 8096
    selector:
        app: jellyfin
