confs/jellyfin/ingress_local.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jellyfin-ingress-local
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10240m
spec:
  ingressClassName: nginx
  rules:
  - host: jellyfin.atweek
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
