confs/jellyfin/jellyfin_ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jellyfin-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10240m
spec:
  ingressClassName: nginx
  rules:
  - host: jellyfin.atweek.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
  # tls:
  # - hosts:
  #    - jellyfin.atweek.fun
  #   secretName: ssl-cert-production
